--- a/coffee-tracker/src/CSS/header.css
+++ b/coffee-tracker/src/CSS/header.css
@@ -16,6 +16,7 @@ nav ul{
     display: flex;
     width: 35vw;
     height: 10vh;
+    gap: 15px;
     justify-content: space-between;
     align-items: center;
     list-style-type: none;
