--- a/coffee-tracker/src/CSS/index.css
+++ b/coffee-tracker/src/CSS/index.css
@@ -49,6 +49,9 @@
 #Banner img{
     display: flex;
     width: 45vw;
+    max-height: 70vh;
+    object-fit: contain;
+    object-position: left;
     position: absolute;
     left: 0;
     bottom: 0;
