Changes in dashboard

--- a/coffee-tracker/src/CSS/user.css
+++ b/coffee-tracker/src/CSS/user.css
@@ -137,7 +137,7 @@
     grid-area: e;
     place-items: center;
     color: white;
-    background-color: #eb4f4d;
+    background-color: #700d7d;
 }
 
 .sensor{
