--- a/coffee-tracker/src/CSS/user.css
+++ b/coffee-tracker/src/CSS/user.css
@@ -93,7 +93,6 @@
 }
 
 .sleep section p{
-    margin-left: 8rem;
     font-size: 3rem;
     font-weight: 300;
     color: #ffffff;
@@ -166,4 +165,25 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+#consejo{
+    place-items: start;
+    font-size: 5rem;
+}
+
+#consejo section{
+    place-items: start;
+}
+
+.temperatura{
+    display: flex;
+    background-color: #2433d8;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    color: white;
+    width: 100%;
+    height: 200px;
+    font-size: 5rem;
 }
