--- a/coffee-tracker/src/CSS/user.css
+++ b/coffee-tracker/src/CSS/user.css
@@ -68,6 +68,7 @@
     display: grid;
     place-items: center;
     padding: 3rem;
+    gap: 10px;
     font-size: 3rem;
     border:6px solid var(--dark-blue);
     border-radius: 2rem;
@@ -100,7 +101,6 @@
 
 .horas{
     grid-area: b;
-    justify-content: center;
     background-color: var(--beishe);
 }
 
@@ -186,4 +186,8 @@
     width: 100%;
     height: 200px;
     font-size: 5rem;
+}
+
+#consumo{
+    font-size: 4rem;
 }
