Don't stop believin, hold on to that feeling

--- a/coffee-tracker/src/CSS/user.css
+++ b/coffee-tracker/src/CSS/user.css
@@ -101,7 +101,15 @@
 
 .horas{
     grid-area: b;
-    background-color: var(--beishe);
+    color: white;
+}
+
+.day{
+    background-color: #5faef9;
+}
+
+.night{
+    background-color: #0d1116;
 }
 
 .coffee{
